# vis-cli

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/vis_cli/: __init__.py  main.py
src/vis_cli/libs/: ocr_engine.py  tesseract_engine.py  vision_api.py
tests/: __init__.py  test_main.py  test_tesseract_engine.py  test_vision_api.py
